<resources>
    <string name="app_name">Кулинарный блокнот</string>
    <string name="exit">Выйти из программы</string>
    <string name="meat">Мясо и рыба</string>
    <string name="soup">Первые блюда</string>
    <string name="zakuski">Закуски</string>
    <string name="salad">Салаты</string>
    <string name="vipechka">Выпечка</string>
    <string name="desert">Десерты</string>
    <string name="sous">Соусы</string>
    <string name="juice">Напитки</string>
    <string name="soveti2">Полезные советы</string>
    <string name="toUp">Выйти на главную</string>
    <string name="hintName">Напишите здесь название рецепта</string>
    <string name="hintContent">Напишите здесь свой рецепт</string>
    <string name="sovett">Запишите здесь ваш совет</string>
    <string name="prostoSovet">Просто совет</string>
    <string name="pictureSovet">Советы в картинках</string>

    <string name="soveti">
                \t\tЛук, морковь и помидоры перед внесением в блюдо рекомендуется спассеровать – это позволяет
        сохранить их вкус, аромат. Позволит также придать цвет готовящемуся блюду.\n
                Если в бульон добавить немного промытых луковых чешуек, то он станет золотистым.\n
                \t\tСвеклу, морковь и картофель обычно варят отдельно друг от друга. Если варить их в одной кастрюле,
        то натуральный вкус овощей потеряется.\n
                \t\tСвеклу нужно варить в кожице 40-45 минут, потом слить горячую воду. Затем залить ее холодной водой
        и дать остыть. Она будет полностью готова.\n
                \t\tЕсли после варки свекла потеряла свой цвет, положите ее в холодильник, цвет частично восстановится.\n
                \t\tДобавляйте немного сахара в воду, в которой варятся овощи, это улучшит их вкус.\n
                \t\tЧтобы лук не ел глаза, разрежьте его на две половинки и положите в холодную воду на несколько минут.\n
                \t\tПри нарезке лука обмакивайте нож в холодную воду.\n
                \t\tЧтобы мелконарезанный лук не пригорел во время обжаривания его нужно обвалять в муке.\n
        Лук приобретет при этом золотистый цвет.\n
                \t\tЧтобы лук стал прозрачным, после обжаривания добавьте ¼ стакана воды и потомите его до полного выпаривания воды.\n
                \t\tФасоль перед началом варки следует замачивать на несколько часов. В фасоли содержатся вещества,
        способствующие газообразованию, и как следствие вспучиванию живота. Замачивание позволит избежать этой неприятности.\n
                \t\tЧтобы фасоль была вкуснее, слейте воду, в которой она варится, сразу же после закипания.
        Затем залейте фасоль горячей водой и варите до готовности.\n
                \t\tКогда варите фасоль, солите ее за 10 минут до конца варки.\n
                \t\tЕсли перед приготовлением горохового супа Вы замочите горох на 5-6 часов, то суп получится более наваристым и вкусным.\n
                \t\tЧтобы баклажаны не были горькими, их надо нарезать кубиками или ломтиками, посолить,
        выдержать 20 минут, а затем промыть холодной водой.\n
                \t\tРедька не будет едкой, если ее натереть и промыть холодной водой.\n
                \t\tЕсли цветную капусту отварить в воде с добавлением молока, то цвет ее не потемнеет.\n
                \t\tЕсли Вы отварили капусту, и она имеет неприятный запах, положите в кастрюлю кусочек белого хлеба,
        или накройте ее тканью, смоченную в уксусе.\n
                \t\tКапусту, морковь, помидоры, тыкву можно не варить, а припускать. Это овощи имеют много
        собственного сока, и для их приготовления не требуется много воды. Зачастую их можно приготовить и в собственном соку.\n
                \t\tЧтобы при отваривании картошки кожица не лопалась, добавьте в воду, в которой она варится несколько капель уксуса
                \t\tПроколите зубочисткой кожицу картофеля в нескольких местах, и при отваривании он не разварится.\n
                \t\tПеред тем, как начать обжаривать картофель, опустите его на несколько минут в горячую воду, он обжарится гораздо быстрее.\n
                \t\tЧтобы кусочки картофеля не прилипали к сковородке и не склеивались во время обжаривания,
        предварительно ополосните их холодной водой, а затем обсушите.\n
                \t\tЕсли Вы жарите картофель, то его следует солить, когда на нем образуется корочка.\n
                \t\tВ супы с квашеной капустой картофель следует закладывать раньше, чем капусту: в кислой
        среде картофель «дубеет» и плохо разваривается.\n
                \t\tПомидоры легко очищаются от кожицы, если их залить кипятком на 1-2 минуты. Предварительно
        можно сделать один -два надреза.\n
                \t\tЕсли вы отварили овощи, то сразу же сливайте с них отвар, иначе их вкус станет водянистым.
        Это не относится к цветной капусте.\n
                \t\tЗамороженные овощи надо вначале разморозить, а затем опускать их в кипящую воду.
        Или залить их холодной водой и отварить.\n
                \t\tОгурцы не стоит хранить вместе с яблоками.\n
                \t\tКогда будете солить огурцы, добавьте в рассол помимо хрена немного сухой горчицы.
        Огурцы станут хрустящими, а рассол долго не испортится.\n
                \t\tГорькие огурцы можно опустить на некоторое время в молоко добавив немного сахара. Горечь уйдет.\n
                \t\tВ салаты нужно резать отварные овощи только тогда, когда они полностью остыли.\n
                \t\tЕсли в состав салата входит вареный картофель, его следует резать и класть в салат последним.\n
                \t\tЕсли перед подачей на стол, в салат ненадолго положить лимонную корочку, то его вкус станет
        более ароматным и выразительным.\n
                \t\tТакже можно перед выкладкой салата в салатник натереть его стенки чесноком, тогда вкус и
        запах станут более выраженными, с легким свежим чесночным запахом.\n
                \t\tСлоеные салаты следует делать заранее, и оставлять их на ночь в холодильнике для того,
        чтобы они лучше пропитались и стали вкуснее.\n
                \t\tДля приготовления винегрета к каждому нарезанному овощу добавьте немного растительного масла,
        и перемешайте их. Также поступить и со свеклой. Тогда овощи останутся своего цвета, и не окрасятся свекольным соком.\n
                \t\tЕсли мелко нарезанный лук положить в дуршлаг и обдать кипятком, то добавив его в овощной
        салат, вы избавитесь от горечи и сделаете его вкуснее.\n
                \t\tЧтобы усилить аромат лимонов, их нужно перед нарезкой ошпарить.\n
                \t\tЧтобы подольше сохранить лимоны свежими, их следует положить целиком в банку, залить холодной
        водой и поставить в холодильник. Воду менять каждый день.\n
                \t\tАнанас или киви не рекомендуется использовать в желе, так как они содержат вещества, которые
        не позволят загустеть желатину.\n
                \t\tЯблоки не будут терять сок при запекании, если удалив сердцевину, опустить их на 3-4 минуты в кипяток.\n
                \t\tЕсли положить шкурки от банана в кастрюлю с варящимся мясом и поварить немного, то мясо
        станет сочным и ароматным. К тому же оно станет разваристым.\n
                \t\tВеточки и листья вишни добавляют в блюдо во время тушения, они придают блюду аромат.\n
                \t\tВ клюкве содержится большое количество бензойной кислоты, которая является хорошим консервантом,
        поэтому клюкву хорошо использовать в разных видах домашних заготовок.\n
                \t\tНе начинайте готовить мясо, пока оно полностью не разморозится.\n
                \t\tПри варке мясных и рыбных продуктов, после того, как они закипели, сразу же убавьте огонь
        и варите без кипения при закрытой крышке. У Вас получатся сочные продукты и прозрачный бульон.\n
                \t\tПри варке мяса соль следует добавлять через 15 минут после закипания.\n
                \t\tЕсли мясо имеет неприятный запах, нужно при его варке положить один-два кусочка древесного угля,
        которые поглотят запах. Можно также мясо нарезать на куски,  тщательно промыть в холодной воде,
        положить в кастрюлю с углем и залить холодной водой, чтобы она покрыла мясо.
        Через два — три часа уголь вынуть и мясо варить в той же воде. Или обмыть мясо тепловатой водой,
        натереть солью и перцем и дать немного полежать.\n
                \t\tПри жарке мяса в духовке его поливают только горячей водой или бульоном, холодная вода придает ему твердость.\n
    </string>
</resources>