<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodtexture"
    tools:context=".soveti.SovetiActivity">

    <Button
        android:id="@+id/btMainMenuBackSoveti"
        style="@style/menu_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:alpha="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvMainMenuBackSoveti"
        style="@style/text_on_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/dserasercyr1"
        android:gravity="center"
        android:text="@string/toUp"
        app:layout_constraintBottom_toBottomOf="@+id/btMainMenuBackSoveti"
        app:layout_constraintEnd_toEndOf="@+id/btMainMenuBackSoveti"
        app:layout_constraintStart_toStartOf="@+id/btMainMenuBackSoveti"
        app:layout_constraintTop_toTopOf="@+id/btMainMenuBackSoveti" />

    <Button
        android:id="@+id/btProstoSoveti"
        style="@style/menu_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:alpha="0.5"
        android:fontFamily="@font/dserasercyr1"
        android:text="@string/prostoSovet"
        android:textColor="@color/ic_launcher_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btPicturesSoveti"
        app:layout_constraintEnd_toEndOf="@+id/btPicturesSoveti"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btPicturesSoveti" />

    <Button
        android:id="@+id/btPicturesSoveti"
        style="@style/menu_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:alpha="0.5"
        android:fontFamily="@font/dserasercyr1"
        android:text="@string/pictureSovet"
        android:textColor="@color/ic_launcher_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSoveti"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btProstoSoveti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btMainMenuBackSoveti" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingSovetiEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.6"
        android:clickable="true"
        app:backgroundTint="#654009"
        app:layout_constraintBottom_toBottomOf="@+id/rvSoveti"
        app:layout_constraintEnd_toEndOf="@+id/rvSoveti"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>